--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,16 @@
 /* global */
+@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+
+*{
+  box-sizing: border-box;
+  font-family: "Nunito", sans-serif;;
+}
 
 .container{
-  margin-left: 300px;
+  background-color: #437bbb;
+  width: 100%;
+  height: 100%;
+  color: #fff;
 }
 
 .separator{
@@ -137,6 +146,90 @@
 }
 body.disable-scroll {
   overflow: hidden; /* Désactiver tout défilement */
+}
+
+/* HomePage  */
+
+.title-screen{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 0;
+  padding-top: 50px;
+  font-size: 30px;
+}
+
+.all-card-board{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.card-board-container{
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  min-width: 200px;
+  max-width: 200px;
+  min-height: 200px;
+  max-height: 200px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  color: #270D60;
+  cursor: pointer;
+  text-align: center;
+}
+.card-board-container p{
+    color: #4F12B8;
+    font-weight: 800;
+}
+
+.title-section{
+  text-align: center;
+}
+
+.all-alternant-liste{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
+}
+
+.alternant-item-container{
+  background-color: #fff;
+  border-radius: 20px;
+  padding: 5px 10px 5px 10px;
+  gap: 10px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 70%;
+  color: #270D60;
+  cursor: pointer;
+  justify-content: space-between;
+}
+
+.alternant-item{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
+
+.status-alternant{
+  color: red;
+}
+.title-alternance{
+  margin-left: 20px;
+  text-align: center;
 }
 
 
