--- a/src/screen/styles/GestionComptes.css
+++ b/src/screen/styles/GestionComptes.css
@@ -1,146 +1,211 @@
 /* Gestion des comptes */
 .container {
-    padding: 20px;
-    background-color: #f9f9f9;
-    border-radius: 8px;
-    width: calc(100% - 260px); /* Ajustement pour laisser de la place pour la navbar */
-    margin-left: 240px; /* Laisser de la place pour la navbar */
-    min-height: calc(100vh - 40px); /* Pour s'assurer que la hauteur couvre l'écran */
-    box-sizing: border-box;
-  }
-  
-  h1, h2, h3 {
-    color: #333;
-    text-align: center;
-  }
-  
-  .form-container, .suiveurs-list {
-    margin-top: 20px;
-  }
-  
-  .form-group {
-    margin-bottom: 15px;
-  }
-  
-  .form-group label {
-    display: block;
-    margin-bottom: 5px;
-  }
-  
-  .form-group input, .form-group select {
-    width: 100%; /* Ajustement de la largeur */
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  button {
-    background-color: #437bbb;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 4px;
-    cursor: pointer;
-    display: block;
-    margin: 10px auto;
-  }
-  
-  button:hover {
-    background-color: #365f9e;
-  }
-  
-  .suiveurs-list table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-  }
-  
-  .suiveurs-list th, .suiveurs-list td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
-  }
-  
-  .suiveurs-list th {
-    background-color: #f2f2f2;
-  }
-  
-  .delete-button {
-    background-color: transparent;
-    border: none;
-    cursor: pointer;
-    color: #e74c3c;
-    font-size: 18px;
-  }
-  
-  .suiveurs-list button:hover {
-    color: #c0392b;
-  }
-  
-  /* Modal styles */
-  .open-modal-button, .edit-mode-button {
-    background-color: #28a745;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-bottom: 20px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .open-modal-button:hover, .edit-mode-button:hover {
-    background-color: #218838;
-  }
-  
-  .modal {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .modal-content {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    width: 500px;
-    position: relative;
-  }
-  
-  .close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background-color: #e74c3c;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-    cursor: pointer;
-  }
-  
-  .close-button:hover {
-    background-color: #c0392b;
-  }
-  
-  /* Tag header */
-  .tag-header {
-    background-color: #ececec;
-    cursor: pointer;
-    font-weight: bold;
-    text-align: left;
-    padding: 8px;
-  }
-  
-  .tag-header:hover {
-    background-color: #d4d4d4;
-  }
-  
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  width: calc(100% - 260px); /* Ajustement pour laisser de la place pour la navbar */
+  margin-left: 240px; /* Laisser de la place pour la navbar */
+  min-height: calc(100vh - 40px); /* Pour s'assurer que la hauteur couvre l'écran */
+  box-sizing: border-box;
+  position: relative;
+}
+
+h1, h2, h3 {
+  color: #333;
+  text-align: center;
+}
+
+.form-container, .suiveurs-list {
+  margin-top: 20px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+.form-group label {
+  display: block;
+  margin-bottom: 5px;
+}
+
+.form-group input, .form-group select, .form-group textarea {
+  width: 100%; /* Ajustement de la largeur */
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+button {
+  background-color: #437bbb;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  cursor: pointer;
+  display: block;
+  margin: 10px auto;
+}
+
+button:hover {
+  background-color: #365f9e;
+}
+
+.suiveurs-list table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.suiveurs-list th, .suiveurs-list td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+}
+
+.suiveurs-list th {
+  background-color: #f2f2f2;
+}
+
+.delete-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #e74c3c;
+  font-size: 18px;
+}
+
+.suiveurs-list button:hover {
+  color: #c0392b;
+}
+
+/* Modal styles */
+.open-modal-button, .edit-mode-button {
+  background-color: transparent;
+  color: #28a745;
+  font-size: 24px;
+  border: none;
+  cursor: pointer;
+  margin-left: 10px;
+}
+
+.open-modal-button:hover, .edit-mode-button:hover {
+  color: #218838;
+}
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  width: 500px;
+  position: relative;
+}
+
+.close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #e74c3c;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.close-button:hover {
+  background-color: #c0392b;
+}
+
+/* Tag header */
+.tag-header {
+  background-color: #ececec;
+  cursor: pointer;
+  font-weight: bold;
+  text-align: left;
+  padding: 8px;
+}
+
+.tag-header:hover {
+  background-color: #d4d4d4;
+}
+
+.header-buttons {
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 20px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  right: 0;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+}
+
+.dropdown-content button {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  width: 100%;
+  text-align: left;
+  background-color: transparent;
+  border: none;
+}
+
+.dropdown-content button:hover {
+  background-color: #f1f1f1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.icon-button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 24px;
+  margin-left: 10px;
+}
+
+.icon-button:hover {
+  color: #365f9e;
+}
+
+/* Batch table styles */
+.batch-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
+}
+
+.batch-table th, .batch-table td {
+  border: 1px solid #ddd;
+  padding: 8px;
+  text-align: center;
+}
+
+.batch-table th {
+  background-color: #f2f2f2;
+}
