--- a/src/screen/styles/GestionComptes.css
+++ b/src/screen/styles/GestionComptes.css
@@ -50,10 +50,25 @@ button:hover {
   background-color: #365f9e;
 }
 
+.template-button {
+  margin-top: 10px;
+  background-color: #28a745;
+}
+
+.template-button:hover {
+  background-color: #218838;
+}
+
+.suiveurs-list {
+  max-height: 60vh; /* Limite la hauteur pour permettre le défilement */
+  overflow-y: auto; /* Ajoute une barre de défilement si nécessaire */
+  margin-top: 20px;
+  margin-bottom: 20px; /* Ajout d'un espace en bas pour mieux voir le défilement */
+}
+
 .suiveurs-list table {
   width: 100%;
   border-collapse: collapse;
-  margin-top: 20px;
 }
 
 .suiveurs-list th, .suiveurs-list td {
@@ -108,7 +123,10 @@ button:hover {
   background-color: #fff;
   padding: 20px;
   border-radius: 8px;
-  width: 500px;
+  width: 80%; /* Ajuster la largeur de la modal */
+  max-width: 800px; /* Largeur maximale pour la modal */
+  max-height: 80vh; /* Limite la hauteur pour permettre le défilement */
+  overflow-y: auto; /* Ajoute une barre de défilement si nécessaire */
   position: relative;
 }
 
@@ -198,14 +216,12 @@ button:hover {
   width: 100%;
   border-collapse: collapse;
   margin-top: 20px;
+  max-height: 40vh; /* Limite la hauteur pour permettre le défilement */
+  overflow-y: auto; /* Ajoute une barre de défilement si nécessaire */
 }
 
 .batch-table th, .batch-table td {
   border: 1px solid #ddd;
   padding: 8px;
   text-align: center;
-}
-
-.batch-table th {
-  background-color: #f2f2f2;
 }
