--- a/src/screen/styles/GestionComptes.css
+++ b/src/screen/styles/GestionComptes.css
@@ -81,7 +81,7 @@ button:hover {
   background-color: #f2f2f2;
 }
 
-.delete-button {
+.delete-button, .edit-button {
   background-color: transparent;
   border: none;
   cursor: pointer;
@@ -181,7 +181,6 @@ button:hover {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 20px;
-  gap: 10px;
 }
 
 .dropdown {
@@ -218,18 +217,6 @@ button:hover {
   display: block;
 }
 
-.icon-button {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  font-size: 24px;
-  color: #437bbb;
-}
-
-.icon-button:hover {
-  color: #365f9e;
-}
-
 .all-users-list {
   margin-top: 20px;
 }
@@ -237,23 +224,7 @@ button:hover {
 .search-bar {
   width: 100%;
   padding: 10px;
+  margin-bottom: 20px;
   border: 1px solid #ccc;
   border-radius: 4px;
-  margin-bottom: 20px;
-}
-
-.batch-table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 10px;
-}
-
-.batch-table th, .batch-table td {
-  border: 1px solid #ddd;
-  padding: 8px;
-  text-align: center;
-}
-
-.batch-table th {
-  background-color: #f2f2f2;
 }
