--- a/src/screen/styles/SuiviEntretiensScreen.css
+++ b/src/screen/styles/SuiviEntretiensScreen.css
@@ -44,7 +44,7 @@
 }
 
 .alerteButton {
-  background-color: #dc3545;
+  background-color: #007bff;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -54,7 +54,7 @@
 }
 
 .formContainer {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .formGroup {
