--- a/src/App.css
+++ b/src/App.css
@@ -190,3 +190,20 @@ body.disable-scroll {
   margin-left: 20px;
   text-align: center;
 }
+
+/* nav */
+.user-img{
+  border-radius: 50%;
+  border: 1px solid #437bbb;
+  padding: 10px;
+}
+
+.button-edit-user {
+  background-color: #437bbb;
+  color: #fff;
+  border-radius: 50px;
+  padding: 2px;
+  position: absolute;
+  margin-top: -65px;
+  margin-left: 30px;
+}
