--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,16 @@
   font-family: "Nunito", sans-serif;
 }
 
+body{
+  background-color: #437bbb;
+}
+/* 
 .container {
   background-color: #437bbb;
   width: 100%;
   height: 100%;
   color: #000000;
-}
+} */
 
 .separator {
   width: 90%;
