--- a/src/screen/styles/GestionEntreprise.css
+++ b/src/screen/styles/GestionEntreprise.css
@@ -1,9 +1,12 @@
 .container {
-  max-width: 800px;
-  margin: 0 auto;
+  max-width: 1000px;
+  margin: 50px auto;
   padding: 20px;
   font-family: Arial, sans-serif;
 }
+
+/* responsive  */
+
 
 h1 {
   text-align: center;
