[FIX]: SearchUser with tag

--- a/src/screen/styles/GestionComptesScreenSuiveur.css
+++ b/src/screen/styles/GestionComptesScreenSuiveur.css
@@ -1,7 +1,7 @@
 /* GestionComptesScreenSuiveur.css */
 
 .GestionComptesScreenSuiveur-container {
-    width: 80%;
+    width: 800px;
     margin: 0 auto;
     padding: 20px;
     background-color: #f9f9f9;
