--- a/src/App.css
+++ b/src/App.css
@@ -211,3 +211,41 @@ body.disable-scroll {
   margin-top: -65px;
   margin-left: 30px;
 }
+
+/* Suiveur rdv screen */
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+}
+
+.card {
+  background-color: #f0f0f0;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  width: calc(33.33% - 20px); /* Adjust width based on desired layout */
+  padding: 20px;
+  transition: box-shadow 0.3s ease;
+
+  /* Flex properties */
+  display: flex;
+  flex-direction: column;
+}
+
+.card:hover {
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.2);
+}
+
+.card-content {
+  flex: 1;
+}
+
+.card h2 {
+  font-size: 1.5rem;
+  margin-bottom: 10px;
+}
+
+.card p {
+  margin: 5px 0;
+}
